k8s/creature-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: creatures
