k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-website
  namespace: default
spec:
  selector:
    app: cv-website
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
